--- a/src/components/ui/typography/style.module.scss
+++ b/src/components/ui/typography/style.module.scss
@@ -93,6 +93,10 @@ h4 {
     color: var(--secondary3);
 }
 
+.danger {
+    color: var(--danger)
+}
+
 .underline {
     text-decoration: underline;
     cursor: pointer
