--- a/src/pages/login-page/style.module.scss
+++ b/src/pages/login-page/style.module.scss
@@ -65,3 +65,58 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 900px) {
+    .wrapper {
+        background: var(--black);
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        align-items: center;
+        padding: 20px 40px;
+        background: var(--black);
+        border-radius: 20px;
+        width: 50%;
+        overflow: hidden;
+        border: 1px solid var(--primary);
+        box-shadow: 0px 5px 10px 2px rgba(255, 255, 255, 0.2);
+    }
+
+    .back {
+        display: none;
+    }
+
+    .stripe {
+        display: none;
+    }
+
+    .logo {
+        width: 100%;
+    }
+
+    .fields {
+        justify-content: space-between;
+        margin-top: 20px;
+        width: 100%;
+
+        button {
+            height: 32px;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .form {
+        width: 70%;
+    }
+}
+
+@media (max-width: 500px) {
+    .form {
+        width: 90%;
+        padding: 20px;
+    }
+}
