--- a/src/components/ui/styled-modal/style.module.scss
+++ b/src/components/ui/styled-modal/style.module.scss
@@ -17,4 +17,13 @@
     padding: 20px 40px;
     background: var(--black);
     border-radius: 20px;
+    -webkit-box-shadow: 0px 5px 10px 2px rgba(255, 255, 255, 0.2);
+    -moz-box-shadow: 0px 5px 10px 2px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 5px 10px 2px rgba(255, 255, 255, 0.2);
+}
+
+@media (max-width: 400px) {
+    .modal {
+        padding: 20px;
+    }
 }
