--- a/src/pages/settings-page/components/personal/style.module.scss
+++ b/src/pages/settings-page/components/personal/style.module.scss
@@ -25,3 +25,9 @@
     height: 32px;
     justify-self: flex-end;
 }
+
+@media (max-width: 800px) {
+    .inputs {
+        flex-direction: column;
+    }
+}
