--- a/src/pages/mechanic-page/style.module.scss
+++ b/src/pages/mechanic-page/style.module.scss
@@ -21,3 +21,8 @@
     background: var(--black);
     box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.6)
 }
+
+.max {
+    max-height: calc(100dvh - 70px);
+    overflow: hidden;
+}
