--- a/src/pages/mechanic-main-page/components/diagnostic-window/style.module.scss
+++ b/src/pages/mechanic-main-page/components/diagnostic-window/style.module.scss
@@ -11,6 +11,7 @@
     left: 100%;
     top: 0;
     transition: all 0.2s ease-in-out;
+    height: calc(100dvh - 70px);
     height: 100%;
     z-index: 500;
 }
