--- a/src/pages/mechanic-main-page/components/electro-window/style.module.scss
+++ b/src/pages/mechanic-main-page/components/electro-window/style.module.scss
@@ -11,7 +11,7 @@
     left: 100%;
     top: 0;
     transition: all 0.2s ease-in-out;
-    height: 100%;
+    height: calc(100dvh - 70px);
     z-index: 500;
 }
 
