--- a/src/pages/admin-documents-page/components/analytics-section/components/table/components/analytics-document-row/style.module.scss
+++ b/src/pages/admin-documents-page/components/analytics-section/components/table/components/analytics-document-row/style.module.scss
@@ -9,7 +9,7 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 24px;
+    align-items: stretch;
 }
 
 .stripe-container {
@@ -20,7 +20,7 @@
 }
 
 .stripe {
-    height: 24px;
+    flex-shrink: 1;
 }
 
 .type {
@@ -29,6 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .created-at {
@@ -37,6 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .actions {
