--- a/src/pages/admin-documents-page/components/dianostic-section/components/table/components/diagnostic-row/style.module.scss
+++ b/src/pages/admin-documents-page/components/dianostic-section/components/table/components/diagnostic-row/style.module.scss
@@ -9,7 +9,9 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 24px;
+    height: fit-content;
+    min-height: 24px;
+    align-items: stretch;
 }
 
 .stripe-container {
@@ -20,7 +22,7 @@
 }
 
 .stripe {
-    height: 24px;
+    flex-shrink: 1;
 }
 
 .car-number {
@@ -29,6 +31,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .created-at {
@@ -37,6 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .actions {
@@ -45,6 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     gap: 10px;
 }
 
