--- a/src/pages/admin-documents-page/components/wait-to-approve-section/components/table/components/document-to-approve-row/components/title-field/style.module.scss
+++ b/src/pages/admin-documents-page/components/wait-to-approve-section/components/table/components/document-to-approve-row/components/title-field/style.module.scss
@@ -1,7 +1,7 @@
 .title {
     flex-grow: 1;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
     cursor: pointer;
 }
