--- a/src/pages/admin-documents-page/components/wait-to-approve-section/components/table/components/document-to-approve-row/style.module.scss
+++ b/src/pages/admin-documents-page/components/wait-to-approve-section/components/table/components/document-to-approve-row/style.module.scss
@@ -9,7 +9,6 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 24px;
 }
 
 .stripe-container {
@@ -20,7 +19,7 @@
 }
 
 .stripe {
-    height: 24px;
+    flex-shrink: 1;
 }
 
 .title {
@@ -29,6 +28,7 @@
     align-items: center;
     gap: 10px;
     cursor: pointer;
+    text-align: center;
 }
 
 .car-number {
@@ -37,6 +37,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .type {
@@ -45,6 +46,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .created-at {
@@ -53,6 +55,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .actions {
@@ -62,6 +65,7 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    text-align: center;
 }
 
 .icon {
