--- a/src/pages/receptionist-documents-page/components/wait-to-approve-section/components/table/components/document-to-approve-row/style.module.scss
+++ b/src/pages/receptionist-documents-page/components/wait-to-approve-section/components/table/components/document-to-approve-row/style.module.scss
@@ -9,7 +9,7 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 24px;
+    align-items: stretch;
 }
 
 .stripe-container {
@@ -20,7 +20,7 @@
 }
 
 .stripe {
-    height: 24px;
+    flex-shrink: 1;
 }
 
 .title {
@@ -29,6 +29,7 @@
     align-items: center;
     gap: 10px;
     cursor: pointer;
+    text-align: center;
 }
 
 .car-number {
@@ -37,6 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .type {
@@ -45,6 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .created-at {
@@ -53,6 +56,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .actions {
