--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -19,10 +19,12 @@
     display: flex;
     justify-content: center;
     overflow: hidden;
-
+    
     img {
         z-index: 1;
         margin-bottom: 5px;
+        border-radius: 50%;
+        border: 1px solid var(--primary)
     }
 }
 
