--- a/src/pages/mechanic-page/style.module.scss
+++ b/src/pages/mechanic-page/style.module.scss
@@ -19,7 +19,12 @@
     align-items: center;
     justify-content: space-between;
     background: var(--black);
-    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.6)
+    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.6);
+
+    img {
+        border-radius: 50%;
+        border: 1px solid var(--primary)
+    }
 }
 
 .max {
